--- a/hw1_predobrabotka_dannix_tweeter/hw_lesson_1.ipynb
+++ b/hw1_predobrabotka_dannix_tweeter/hw_lesson_1.ipynb
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 1,
    "metadata": {
     "id": "pkKXKtZr_Fap"
    },
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 3,
    "metadata": {
     "id": "5aaY7Ngd_Faq",
     "outputId": "02011051-a634-4558-8c64-bab846db4904"
@@ -424,7 +424,7 @@
        "4   5      0             factsguide: society now    #motivation"
       ]
      },
-     "execution_count": 257,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 4,
    "metadata": {
     "id": "cyC0LsB3_Fas",
     "outputId": "7e4ef456-4a55-4eb0-f0d0-253b52053021"
@@ -506,7 +506,7 @@
        "4  31967    3rd #bihday to my amazing, hilarious #nephew..."
       ]
      },
-     "execution_count": 258,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -518,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 5,
    "metadata": {
     "id": "jHUAovlq_Fas",
     "outputId": "f839b0dc-0e18-40b9-fd06-d3d18f86e05a"
@@ -594,7 +594,7 @@
        "4   5    0.0             factsguide: society now    #motivation"
       ]
      },
-     "execution_count": 259,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -606,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 6,
    "metadata": {
     "id": "fcO2oSbk_Fat",
     "outputId": "c0f56bdd-b4d6-4394-d6e0-c50c15a3144f"
@@ -648,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -660,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -768,7 +768,7 @@
        "9  10    0.0              welcome here !  i'm   it's so #gr8 ! "
       ]
      },
-     "execution_count": 262,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -788,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -806,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -816,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -835,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -854,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -873,7 +873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -893,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -913,12 +913,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "def replace_numb(text):\n",
-    "    return re.sub(r'[^a-zA-Z0-9]', ' ', text)\n",
+    "    return re.sub(r'[^a-zA-Z]', ' ', text)\n",
     "combine_df.tweet = combine_df.tweet.apply(replace_numb)"
    ]
   },
@@ -933,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -953,7 +953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -962,7 +962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -971,7 +971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1021,7 +1021,7 @@
        "0  [when, father, is, dysfunctional, and, is, so,...  "
       ]
      },
-     "execution_count": 291,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1041,7 +1041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1050,7 +1050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1059,7 +1059,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1070,7 +1070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1079,7 +1079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1134,7 +1134,7 @@
        "0  [father, dysfunctional, selfish, drags, kids, ...  "
       ]
      },
-     "execution_count": 296,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1154,7 +1154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1163,7 +1163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 298,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1172,7 +1172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 299,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1185,7 +1185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1194,7 +1194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 301,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1254,7 +1254,7 @@
        "0  [father, dysfunct, selfish, drag, kid, dysfunc...  "
       ]
      },
-     "execution_count": 301,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1274,7 +1274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 302,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1284,7 +1284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 303,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1297,7 +1297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 304,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1306,7 +1306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 305,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1371,7 +1371,7 @@
        "0  [father, dysfunct, selfish, drag, kid, dysfunc...  "
       ]
      },
-     "execution_count": 305,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1391,7 +1391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 35,
    "metadata": {
     "id": "07szLfuk_Faw"
    },
@@ -1402,7 +1402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1412,13 +1412,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
     "with open('combibe_df.pickle', 'rb') as f:\n",
     "    data_new = pickle.load(f)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
